<resources>
    <string name="app_name">CelixAndroid</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ndon_t_have_an_account">\nDon\'t have an account?</string>
    <string name="register_now">Register Now!</string>
    <string name="sign_up">Sign Up!</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="are_you_a_doctor">Are you a doctor?</string>
    <string name="yes">Yes!</string>

    <string name="no">No!</string>
    <string name="sign_up_Button">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now!</string>
    <string name="logo">Logo</string>
    <string name="celix">CeliX</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="semd_me_an_email">Semd me an email</string>
    <string name="send_me_back_to">Send me back to</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_activity_celix_menu">MainActivity</string>
    <string name="send_me_an_email">Send me an email!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>