<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@drawable/background">
    <LinearLayout
        android:id="@+id/linearLayoutBig"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:gravity="center_vertical|center_horizontal"
            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="4"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/custom_face_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textEmailAddress"
            android:textColor="@drawable/text_color_focused"
            android:textColorHint="@color/darkGray"
            android:visibility="visible"
            android:autofillHints="Name"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editTextSUEmail"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="4"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@drawable/text_color_focused"
            android:textColorHint="@color/darkGray"
            android:visibility="visible"
            android:autofillHints="Email"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editTextSUPassword"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="4"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/custun_lock_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@drawable/text_color_focused"
            android:textColorHint="@color/darkGray"
            android:autofillHints="Pass"
            android:visibility="visible"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editTextSURePassword"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="4"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/custun_lock_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@drawable/text_color_focused"
            android:textColorHint="@color/darkGray"
            android:autofillHints="Pass"
            android:visibility="visible"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="@string/are_you_a_doctor"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            />
        <LinearLayout
            android:id="@+id/linearChecks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:weightSum="100"
            android:gravity="start"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="13" />
            <CheckBox
                android:id="@+id/checkboxYes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/yes"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <CheckBox
                android:id="@+id/checkboxNo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/no"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignUp"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/sign_up_Button"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/custom_button_login"
            android:textColor="@color/primaryDark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <ProgressBar
            android:id="@+id/progressBarSU"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop"
            android:progressDrawable="@color/primaryNorm"
            android:progressTint="@color/primaryNorm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:textColor="@color/primaryNorm"
            android:text="@string/already_have_an_account"
            android:gravity="bottom|end"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            />
        <TextView
            android:id="@+id/textSUToLoginPage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:textColor="@color/primaryDark"
            android:text="@string/login_now"
            android:textAlignment="textEnd"
            android:clickable="true"
            android:focusable="true"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>