<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayoutBig"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:gravity="center_vertical|center_horizontal"
            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <EditText
            android:id="@+id/editTextLIemail"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="7"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@drawable/text_color_focused"
            android:textColorHint="@color/darkGray"
            android:visibility="visible"
            android:autofillHints="Email"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            />

        <EditText
            android:id="@+id/editTextLIPassword"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="7"
            android:background="@drawable/custom_imput"
            android:drawableStart="@drawable/custun_lock_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@drawable/text_color_focused"
            android:textColorHint="@color/darkGray"
            android:autofillHints="Pass"
            android:visibility="visible"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/custom_button_login"
            android:textColor="@color/primaryDark"
            />
        <TextView
            android:id="@+id/textView2ForgotPass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center_vertical|center_horizontal"
            android:shadowColor="@color/black"
            android:shadowRadius="10"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            />
        <ProgressBar
            android:id="@+id/progressBarLI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop"
            android:progressDrawable="@color/primaryNorm"
            android:progressTint="@color/primaryNorm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="23" />
        <LinearLayout
            android:id="@+id/linearSmall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="100"
            android:gravity="start"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:src="@drawable/logo_lic"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textColor="@color/primaryNorm"
                    android:text="Don't have an account?"
                    android:gravity="bottom|end"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    />
                <TextView
                    android:id="@+id/textView2SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textColor="@color/primaryDark"
                    android:text="@string/register_now"
                    android:textAlignment="textEnd"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"

                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>